--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat&family=Libre+Baskerville&family=Lora:wght@500&family=Roboto:wght@300&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
 }
 
-body{
-    font-family: 'Poppins',sans-serif;
+body {
+    font-family: 'Poppins', sans-serif;
     background-color: #121212;
 }
 
-.sidebar{
+.sidebar {
     position: fixed;
     background-color: black;
     left: 0;
@@ -20,72 +20,72 @@ body{
     padding: 20px;
 }
 
-.sidebar .logo img{
+.sidebar .logo img {
     width: 120px;
     cursor: pointer;
 }
 
-.sidebar .navigation ul{
+.sidebar .navigation ul {
     list-style: none;
     margin-top: 15px;
 }
 
-.sidebar .navigation ul li{
+.sidebar .navigation ul li {
     padding: 10px 0px;
 }
 
-.sidebar .navigation ul li a{
+.sidebar .navigation ul li a {
     text-decoration: none;
     color: #b3b3b3;
     font-size: 20px;
     font-weight: 500;
 }
 
-.sidebar .navigation ul li a:hover{
+.sidebar .navigation ul li a:hover {
     color: white;
 }
 
-.sidebar .navigation ul li .fa{
+.sidebar .navigation ul li .fa {
     font-size: 20px;
     margin-right: 10px;
 }
 
-.sidebar .policies{
+.sidebar .policies {
     position: absolute;
     bottom: 80px;
 }
 
-.sidebar .policies ul{
+.sidebar .policies ul {
     list-style: none;
 }
 
-.sidebar .policies ul li{
+.sidebar .policies ul li {
     padding-bottom: 10px;
 }
 
-.sidebar .policies ul li a{
+.sidebar .policies ul li a {
     color: #b3b3b3;
     font-weight: 500;
     text-decoration: none;
 }
 
-.sidebar .policies ul li a:hover{
+.sidebar .policies ul li a:hover {
     text-decoration: underline;
 }
 
-.main-container{
+.main-container {
     margin-left: 350px;
     margin-bottom: 100px;
 }
 
-.topbar{
+.topbar {
     display: flex;
     justify-content: space-between;
     background-color: #000;
     padding: 30px 15px;
 }
 
-.topbar .prev-next-buttons button{
+.topbar .prev-next-buttons button {
     cursor: not-allowed;
     color: #7a7a7a;
     height: 34px;
@@ -97,22 +97,22 @@ body{
     margin-right: 10px;
 }
 
-.navbar{
+.navbar {
     display: flex;
     align-items: center;
 }
 
-.navbar ul{
+.navbar ul {
     list-style: none;
 }
 
-.navbar ul li{
+.navbar ul li {
     display: inline-block;
     margin: 0px 8px;
     width: 100px;
 }
 
-.navbar ul li a{
+.navbar ul li a {
     color: #b3b3b3;
     text-decoration: none;
     font-weight: bold;
@@ -120,13 +120,13 @@ body{
     letter-spacing: 1px;
 }
 
-.navbar ul li a:hover{
+.navbar ul li a:hover {
     color: white;
     font-size: 20px;
     transition: all ease 0.2s;
 }
 
-.navbar button{
+.navbar button {
     background-color: white;
     color: black;
     border-radius: 20px;
@@ -139,31 +139,31 @@ body{
     margin-right: 10px;
 }
 
-.navbar button:hover{
+.navbar button:hover {
     background-color: #f2f2f2;
     transition: all ease 0.2s;
     transform: scale(105%);
 }
 
-.spotify-playlists{
+.spotify-playlists {
     padding: 20px 40px;
 }
 
-.spotify-playlists h2{
+.spotify-playlists h2 {
     color: white;
     font-size: 20px;
     margin-bottom: 20px;
     cursor: pointer;
 }
 
-.spotify-playlists .list{
+.spotify-playlists .list {
     display: flex;
     gap: 20px;
     overflow: hidden;
     margin-bottom: 20px;
 }
 
-.spotify-playlists .list .item{
+.spotify-playlists .list .item {
     min-width: 140px;
     width: 180px;
     padding: 16px;
@@ -174,20 +174,20 @@ body{
     transition: all ease 0.4s;
 }
 
-.spotify-playlists .list .item:hover{
+.spotify-playlists .list .item:hover {
     background-color: #252525;
 }
 
-.spotify-playlists .list .item img{
+.spotify-playlists .list .item img {
     width: 100%;
     border-radius: 6px;
 }
 
-.spotify-playlists .list .item .play{
+.spotify-playlists .list .item .play {
     position: relative;
 }
 
-.spotify-playlists .list .item .play .fa{
+.spotify-playlists .list .item .play .fa {
     position: absolute;
     right: 10px;
     padding: 18px;
@@ -198,12 +198,12 @@ body{
     transition: all ease 0.4s;
 }
 
-.spotify-playlists .list .item:hover .play .fa{
+.spotify-playlists .list .item:hover .play .fa {
     opacity: 1;
     transform: translateY(-20px);
 }
 
-.spotify-playlists .list .item h4{
+.spotify-playlists .list .item h4 {
     color: white;
     font-size: 20px;
     margin-bottom: 10px;
@@ -212,14 +212,14 @@ body{
     overflow: hidden;
 }
 
-.spotify-playlists .list .item p{
+.spotify-playlists .list .item p {
     color: #989898;
     font-size: 18px;
     line-height: 20px;
     font-weight: 500;
 }
 
-.preview{
+.preview {
     position: fixed;
     height: 60px;
     bottom: 0;
@@ -233,8 +233,8 @@ body{
     border-radius: 4px;
     cursor: pointer;
 }
- 
-.preview h6{
+
+.preview h6 {
     font-size: 16px;
     text-transform: uppercase;
     font-weight: 400;
@@ -242,13 +242,13 @@ body{
     margin-top: 5px;
 }
 
-.preview p{
+.preview p {
     font-size: 18px;
     font-weight: 600;
     letter-spacing: 1px;
 }
 
-.preview button{
+.preview button {
     margin-top: 10px;
     color: black;
     background-color: white;
@@ -261,54 +261,9 @@ body{
     margin-right: 10px;
 }
 
-.preview button:hover{
-    background-color: #b3b3b3;
+.preview button:hover {
+    background-color: #f2f2f2;
     transition: all eas 0.4s;
     transform: scale(105%);
-}
-
-h2{
-    margin-bottom: 10px;
-    color: white;
-    text-align: center;
-    position: absolute;
-    top: 20%;
-    left: 0;
-    right: 0;
-    font-size: 50px;
-    font-weight:600;
-}
-
-.container{
-    border: 2px solid rgb(163, 154, 154);
-    border-radius: 5px;
-    padding: 5px 5px;
-    height: 800px;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    width: 50%;
-    margin-left: 25%;
-}
-
-.login-type{
-    width: 70%;
-}
-
-.login-type-item{
-    border-bottom: 2px solid gray;
-    margin-bottom: 10px;
-    padding: 40px;
-}
-
-/* .horizontal{
-    width: 300px;
-    color: rgb(217, 217, 217);
-} */
-
-.credential-fill{
-    margin: 0 auto;
-    text-align: center; 
 }
 
